Todo lo que es Fragmento.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".Ejemplo1.MainActivity">
     <Spinner
-        android:entries="@array/tipo"
+        android:id="@+id/mispinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <fragment
-        android:id="@+id/mifragment"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:name="com.example.mitema2onlinefragmento.Lista_fragmento"/>
+        android:layout_height="wrap_content"
+        android:entries="@array/tipo" />
+    <FrameLayout
+        android:id="@+id/fragmento"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
